[package]
name = "cachyos-tune"
version = "0.1.0"
edition = "2021"
description = "System tuning CLI for CachyOS on AMD APU"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
comfy-table = "7"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
strip = true
